tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_21.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((- ((0 + z) - (1 DIV 200))) MOD (- (- (200 MOD 1223))));
               q := ((((0 * z) + (1223 DIV y)) MOD ((- 0) DIV (+ 0))) < (- (+ (2 + 0))));
               y := (+ (((y * x) DIV (+ x)) * ((- 1223) * (- 1))));
               q := ((+ ((y + 200) - (- y))) >= ((- (z - 1)) * ((x DIV 1) MOD (0 + 2))));
  (* error *)  p := (((- (- r)) * (+ (- 2))) # (+ ((- y) - (y DIV y))));
               z := (- (((0 * 0) DIV (1 MOD z)) DIV ((2 * z) + (+ x))));
               r := ((+ ((1223 MOD 200) + (1223 DIV 1223))) <= (((x DIV 200) - (1 + 1223)) DIV ((0 - 1223) MOD (2 MOD 200))));
               p := ((((1223 MOD y) MOD (+ 1)) < ((200 DIV 0) - (- 0))) & (((x * 200) >= (- 2)) & ((- 2) = (+ 1))));
               r := ((- (- (1223 + 2))) = ((- (2 * 0)) - ((200 MOD x) + (y MOD 0))));
               p := ((+ ((z * y) MOD (x + 0))) >= (((- 0) MOD (z * 0)) - ((1 DIV x) * (1223 - 0))))
END Test15.